--- a/blog/Templates/Blog/post_list.html
+++ b/blog/Templates/Blog/post_list.html
@@ -9,9 +9,11 @@
 
          <p> <a href="https://djangogirls.org">Click this to find out more.</a>
         </p>
-       
-        
         </div>
 
+    <div>
+        <h3><a href=""></a>Explore Posts</h3>
+
+    </div>
     </body>
 </html>
